- Use sessionStorage for the Local Context instead of Cookie by default.
- Cookie is now destroyed when browser is closed when the value of 'authexpired' key in a definition file is 0.
- Divide the pagination codes to INTER-Mediator-Navi.js.
- Update OME.php to sending to the email address including '+' (especially for Gmail users).
- [BUG FIX] Fix compatibility when using INTERMediator.additionalCondition or INTERMediator.additionalSortKey.
  The affected version is 4.3 only (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix an error when the value of 'operator' is 'or' or 'and' in additionalCondition with FileMaker Server.
  The affected versions are 3.11, 4.0, 4.1, 4.2 and 4.3 (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix not to show the error message (message id: 1024) when updating data using Safari (version 4.3 only).
- [BUG FIX] Fix an error in "Master-Detail Style Page" Sample for PostgreSQL (version 4.3 only).
- [BUG FIX] Fix updating data when uploading a file and specifying the 'field' key and not specifying the 'context' 
  key in the 'file-upload' key of the definition file.
- [BUG FIX] Avoid an error in getValueFromIMNode() of INTER-Mediator-Lib.js if the parameter is null.
- [BUG FIX] Fix handling the 'maxrecords' key and INTERMediator.pagedSize.
- [BUG FIX] The JS program of the Sample_chat has been modified.
- [BUG FIX] Fix not to show the error message ("currentRecord is null - EXCEPTION-25") when using the PostOnlyContext 
  and the related context is exisiting.
- [BUG FIX] Fix not to show the error message ("curVal.replace is not a function - EXCEPTION-27") in 
  IMLibElement.setValueToIMNode() if the element of the parameter is a textarea element and the value is false.
- [BUG FIX] Fix not to show the dialog message when the value of the Local Context is updated.
- [BUG FIX] Avoid outputting duplicated alert messages of the validation when changing the value.